# space-game

./: CMakeLists.txt  ship.xcf
src/: engine.cpp  engine.h  entity.cpp  entity.h  logic.cpp  logic.h  main.cpp  sdl2.h
